<resources>
    <string name="app_name">Fintech Project</string>
    <string name="title_events">Мероприятия</string>
    <string name="title_courses">Мои курсы</string>
    <string name="title_profile">Профиль</string>
    <string name="last_name_title">Фамилия:&#160;</string>
    <string name="first_name_title">Имя:&#160;</string>
    <string name="middle_name_title">Отчество:&#160;</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="confirm_dialog_message">Если уйти с экрана редактирования, изменения не сохранятся. Уйти?</string>
    <string name="confirm_dialog_stay">Остаться</string>
    <string name="confirm_dialog_leave">Уйти</string>
    <string name="invalid_profile">Пожалуйста проверьте правильность введенных данных</string>

    <!-- Auth Page -->
    <string name="email">E-MAIL</string>
    <string name="password">ПАРОЛЬ</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="enter">Войти</string>
    <string name="wrong_email">Проверьте правильность почты</string>
    <string name="wrong_password">Проверьте правильность пароля</string>

    <!-- Events Page -->
    <string name="actual">Актуальное</string>

    <string name="points">%.2f %s</string>
    <plurals name="plurals_points">
        <item quantity="one">балл</item>
        <item quantity="few">балла</item>
        <item quantity="many">баллов</item>
        <item quantity="other">баллов</item>
    </plurals>
</resources>
