<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/last_name_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/last_name_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minWidth="100dp"
        app:layout_constraintBaseline_toBaselineOf="@id/last_name_title"
        app:layout_constraintLeft_toRightOf="@id/last_name_title"
        app:layout_constraintTop_toTopOf="@id/last_name_title" />

    <TextView
        android:id="@+id/first_name_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/first_name_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_title" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minWidth="100dp"
        app:layout_constraintBaseline_toBaselineOf="@id/first_name_title"
        app:layout_constraintLeft_toRightOf="@id/first_name_title"
        app:layout_constraintTop_toTopOf="@id/first_name_title" />

    <TextView
        android:id="@+id/middle_name_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/middle_name_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_title" />

    <EditText
        android:id="@+id/middle_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minWidth="100dp"
        app:layout_constraintBaseline_toBaselineOf="@id/middle_name_title"
        app:layout_constraintLeft_toRightOf="@id/middle_name_title"
        app:layout_constraintTop_toTopOf="@id/middle_name_title" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_name_title" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_name_title" />

</android.support.constraint.ConstraintLayout>