<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="12dp">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/TextTitle"
              android:id="@+id/last_name_title"
              android:text="@string/last_name_title"
              android:paddingBottom="4dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/TextTitle"
              android:id="@+id/last_name"
              tools:text="Shakhov"
              app:layout_constraintTop_toTopOf="@id/last_name_title"
              app:layout_constraintLeft_toRightOf="@id/last_name_title"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/TextTitle"
              android:id="@+id/first_name_title"
              android:text="@string/first_name_title"
              android:paddingBottom="4dp"
              app:layout_constraintTop_toBottomOf="@id/last_name_title"
              app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/TextTitle"
              android:id="@+id/first_name"
              tools:text="Denis"
              app:layout_constraintTop_toTopOf="@id/first_name_title"
              app:layout_constraintLeft_toRightOf="@id/first_name_title"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/TextTitle"
              android:id="@+id/middle_name_title"
              android:text="@string/middle_name_title"
              app:layout_constraintTop_toBottomOf="@id/first_name_title"
              android:paddingBottom="4dp"
              app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/TextTitle"
              android:id="@+id/middle_name"
              tools:text="Andreevich"
              app:layout_constraintTop_toTopOf="@id/middle_name_title"
              app:layout_constraintLeft_toRightOf="@id/middle_name_title"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/button_edit"
            android:text="@string/edit"
            app:layout_constraintTop_toBottomOf="@id/middle_name_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>